去除文档和配置文件saas字杨

--- a/deployPackageAndConfiguration/config-files/dockerAndShell/DDC-Nginx/stream/openapi.conf
+++ b/deployPackageAndConfiguration/config-files/dockerAndShell/DDC-Nginx/stream/openapi.conf
@@ -1,5 +1,5 @@
 upstream openapi {
-  server 10.0.1.241:18080 weight=1;
+  server x.x.x.x:18080 weight=1;
 }
 
 # ip白名单
@@ -24,8 +24,8 @@ server {
   server_name  xxx.api.com;
   set $jsonlog '';
   log_by_lua_file /etc/nginx/conf.d/jsonlog.lua;
-  access_log  /var/log/openapi-saas.json log_format_jsonlog;
-  error_log  /var/log/openapi-saas.error info;
+  access_log  /var/log/openapi.json log_format_jsonlog;
+  error_log  /var/log/openapi.error info;
   # ssl_certificate  /etc/nginx/ssl/server.crt;
   # ssl_certificate_key /etc/nginx/ssl/server.key;
   client_max_body_size 500m;
